# ChangeLog for gnome-base/gnome-menus
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-menus/ChangeLog,v 1.128 2009/05/10 18:51:37 eva Exp $

  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-menus-2.26.1.ebuild:
  Forgot to restore postrm python_mod_cleanup sanity.

*gnome-menus-2.26.1 (10 May 2009)

  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-menus-2.20.3.ebuild, -gnome-menus-2.22.2.ebuild,
  +gnome-menus-2.26.1.ebuild:
  New version for GNOME 2.26. Translation updates.

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-menus-2.24.2:
  Stable for HPPA (bug #260063).

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-menus-2.24.2.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> gnome-menus-2.24.2.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> gnome-menus-2.24.2.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-menus-2.24.2.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-menus-2.24.2.ebuild:
  Marking gnome-menus-2.24.2 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-menus-2.24.2.ebuild:
  Marking gnome-menus-2.24.2 ppc64 stable for bug 260063

*gnome-menus-2.24.2 (27 Nov 2008)

  27 Nov 2008; Mart Raudsepp <leio@gentoo.org> -gnome-menus-2.24.1.ebuild,
  +gnome-menus-2.24.2.ebuild:
  New version, adds Asturian translation.

  13 Nov 2008; Brent Baude <ranger@gentoo.org> gnome-menus-2.22.2.ebuild:
  Marking gnome-menus-2.22.2 ppc64 stable for bug 236971

*gnome-menus-2.24.1 (22 Oct 2008)

  22 Oct 2008; Mart Raudsepp <leio@gentoo.org> -gnome-menus-2.24.0.ebuild,
  +gnome-menus-2.24.1.ebuild:
  Version bump. Translation updates.

*gnome-menus-2.24.0 (20 Oct 2008)

  20 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-menus-2.24.0.ebuild: