@@ -1,9 +1,12 @@
+AUX 10-xdg-menu-gnome 115 RMD160 3e235da94ec1e7f97be144358f105d24ca8144e8 SHA1 f4d0e6dff08acd5b06531973f1f68b5f4a640240 SHA256 d6a4938ed879f908e93d0c917db4c99321cb6fa126b79fe1e878ff2ddade963b
 AUX gnome-menus-2.18.3-ignore_kde_standalone.patch 1208 RMD160 302201bbc2a9b4d6a673904d11ce60390268b4b5 SHA1 58880f2807bc6a11a724a15c4f626f7385e650be SHA256 6b13ae1708b5d4753f38e57e161e58bd31d0b7a9de8b78145052388b150eedb8
 DIST gnome-menus-2.20.3.tar.bz2 446966 RMD160 eb1ff84b161d8354b1ee30364cefec91a43ff57d SHA1 25c8161f1bb4ecd4a868cbf1b59edcfb06adaa51 SHA256 2ce7a6aabed338ca3f65685e7e46149cdacc80fab0a8701c2d827fcb950a9897
 DIST gnome-menus-2.24.2.tar.bz2 453261 RMD160 f377b2ea6f94a4ecd159e0a095c8a0ea3139ed37 SHA1 8769c37ca8a7045d9b79b02fd3fa3f89442b4271 SHA256 c28cc72e69164533e4a64270486d18b58184920ec4f4b288758758a373d45d3c
 DIST gnome-menus-2.26.1.tar.bz2 460916 RMD160 53e37a05b67e8e757888b5726e24c58fc7e15ffa SHA1 e89b4cc483821429fba4db3399e35775e5f73d20 SHA256 2a5696f6673aef57a87bb32e36c51a1a940ca701f6222c864b428b356bfe84e4
+DIST gnome-menus-2.26.2.tar.bz2 438945 RMD160 a3b526d908448c52737edecb8f83c6c99e0d72e9 SHA1 ab914a083ef63bacd960349b3dee3dbd3a005a82 SHA256 c9709695819ffaea92d41647adef8c0a6a408aa9a725e4b2987273bb06115a1c
 EBUILD gnome-menus-2.20.3.ebuild 1515 RMD160 efdcadd461066c7838b7b6e9682b4e42f14a80ec SHA1 f95c7a543289306d36efbcafee6880bd266ab46e SHA256 3f3200e183b106ddf2064d176c23a34cd2808ac0c523758f7dbead1b0b8080d8
 EBUILD gnome-menus-2.24.2.ebuild 1575 RMD160 8adc46cd88c65fbfaf57f3651170d314faaf5f33 SHA1 2261694811e76bd37931d839090a91dc736ef394 SHA256 e8b1cab3e0cbad1b26dd538a7b4170ec013a9e48cf798099e1b86517e7b68dc3
 EBUILD gnome-menus-2.26.1.ebuild 1562 RMD160 f3b5e2b10d950b229fd4e7445a4cbb587b675824 SHA1 ce87f80e043283d9b6a5c89f5c810928ca2ab709 SHA256 4abef150a4eb943a5ee52810c7c2a69f0b78bd3f84dbe730ffbf82ddc7e2cc23
-MISC ChangeLog 16840 RMD160 579ee557dfbc9644f52a8fdc646b4287786635ee SHA1 580fc7ac222a9c121421914d8853e48523243ef7 SHA256 634af4d8033bcd5a9e66f7850d752c56b7275e1432dc3d77e1e73854be16484d
+EBUILD gnome-menus-2.26.2.ebuild 2064 RMD160 ebc02e96ce86f801a6d0b18be3c5764e81126c96 SHA1 7c84545f8c0a1926a1ffa7941ae381daba6522d6 SHA256 f3d69453f576a25cd7db10c8aff3af2dbe6e78ef7ce0d6de6f3aa5a26938ed16
+MISC ChangeLog 17074 RMD160 4e1844eb3ef03bba1cd22e92b9797fa56d82636c SHA1 da9bdf6de2549b88621841479ec1a1ecbf9687e6 SHA256 87df4ff8b440471796b5e1df2e7f263b895d85f4827179acfaaf6ed3349a2853
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
