@@ -1,0 +1,6 @@
+#!/bin/sh
+
+if [ -z "$XDG_MENU_PREFIX" ] && [ "$DESKTOP_SESSION" = "gnome" ]
+then
+	export XDG_MENU_PREFIX=gnome-
+fi
